--- a/dashboard.css
+++ b/dashboard.css
@@ -1,12 +1,37 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 1fr;
 }
 
 .header {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  display: grid;
+}
+
+.header-top {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.header-top-search {
+  display:grid;
+  grid-template-columns: 100px 1fr;
+}
+
+input {
+  height: 22px;
+}
+
+.header-top-profile {
+  display: grid;
+  grid-template-columns: 100px 100px 1fr;
+}
+
+.header-bottom {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .dashboard {
