--- a/dashboard.css
+++ b/dashboard.css
@@ -1,7 +1,14 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 5fr;
+  width: 100%;
+  height: 100vh;
 }
 
 .header {
@@ -17,7 +24,7 @@
 
 .header-top-search {
   display:grid;
-  grid-template-columns: 100px 1fr;
+  grid-template-columns: 50px 1fr;
 }
 
 input {
@@ -34,7 +41,38 @@ input {
   grid-template-columns: 1fr 1fr;
 }
 
+.header-bottom-profile {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+}
+
 .dashboard {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+}
+
+.dashboard ul {
+  list-style-type: none;
+}
+
+.main {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.projects {
+  grid-row: 1 / 3;
+}
+
+.announcements {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.trending {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
