Added font, grid, and reduced margin sizes dashboard.css
Added Inter font,
Added grid to all of the individual projects, announcements and trending accounts
Positioned them so that they matched the layout
Removed all margins from h1-3

--- a/dashboard.css
+++ b/dashboard.css
@@ -1,7 +1,25 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: Inter, Arial, sans-serif;
+  /* font-family:Arial, Helvetica, sans-serif; */
 }
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
 
 .container {
   display: grid;
@@ -67,12 +85,51 @@ input {
   grid-row: 1 / 3;
 }
 
+.project-card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.project-card {
+  width: 250px;
+  height: 200px;
+  display: grid;
+  grid-template-rows: 1fr 2fr 1fr;
+  border: 1px solid blue;
+}
+
+.project-links {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .announcements {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
 
 .trending {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.trending-container > div {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.trending-container > div > div {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.trending-container > div > h2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.trending-container > div > h3 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
