--- a/dashboard.css
+++ b/dashboard.css
@@ -5,25 +5,14 @@ body {
   /* font-family:Arial, Helvetica, sans-serif; */
 }
 
-h1 {
+h1, h2, h3, p, ul {
   margin: 0;
   padding: 0;
 }
-
-h2 {
-  margin: 0;
-  padding: 0;
-}
-
-h3 {
-  margin: 0;
-  padding: 0;
-}
-
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 150px 1fr;
   grid-template-rows: 1fr 5fr;
   width: 100%;
   height: 100vh;
@@ -33,6 +22,7 @@ h3 {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   display: grid;
+  padding: 1rem;
 }
 
 .header-top {
@@ -62,6 +52,29 @@ input {
 .header-bottom-profile {
   display: grid;
   grid-template-columns: 100px 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.header-bottom-profile > div{
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.header-bottom-profile > h2{
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.header-bottom-profile > h1{
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.header-bottom-buttons > button {
+  padding: 15px 40px;
+  border-radius: 25px;
+  border: 0px;
+  font-family: Inter;
 }
 
 .dashboard {
@@ -79,6 +92,7 @@ input {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 1fr;
+  gap: 10px;
 }
 
 .projects {
@@ -87,25 +101,45 @@ input {
 
 .project-card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 10px;
 }
 
 .project-card {
-  width: 250px;
   height: 200px;
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
+  border-radius: 10px;
+  box-shadow: 0px 2px 3px gray;
+  padding: 1rem 1rem 0rem 1rem;
 }
 
+/* .project-card > p {
+  text-overflow: ellipsis;
+  padding: 1rem;
+} */
+
 .project-links {
+  justify-self: end;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 50px 50px 50px;
+  justify-items: center;
+  align-items: center;
+}
+
+.project-links > img {
+  height: 20px;
+  width: 20px;
 }
 
 .announcements {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+}
+
+.announcement-container {
+  margin: 1rem;
 }
 
 .trending {
