--- a/dashboard.css
+++ b/dashboard.css
@@ -2,10 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: Inter, Arial, sans-serif;
-  /* font-family:Arial, Helvetica, sans-serif; */
 }
 
-h1, h2, h3, p, ul {
+h1,
+h2,
+h3,
+p,
+ul {
   margin: 0;
   padding: 0;
 }
@@ -26,12 +29,12 @@ h1, h2, h3, p, ul {
 }
 
 .header-top {
-  display:grid;
+  display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
 .header-top-search {
-  display:grid;
+  display: grid;
   grid-template-columns: 50px 1fr;
 }
 
@@ -55,17 +58,17 @@ input {
   grid-template-rows: 1fr 1fr;
 }
 
-.header-bottom-profile > div{
+.header-bottom-profile > div {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 }
 
-.header-bottom-profile > h2{
+.header-bottom-profile > h2 {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
 
-.header-bottom-profile > h1{
+.header-bottom-profile > h1 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
@@ -109,16 +112,10 @@ input {
   height: 200px;
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
-  /* border: 1px solid blue; */
   border-radius: 10px;
   box-shadow: 0px 2px 3px gray;
   padding: 1rem 1rem 0rem 1rem;
 }
-
-/* .project-card > p {
-  text-overflow: ellipsis;
-  padding: 1rem;
-} */
 
 .project-links {
   justify-self: end;
