--- a/dashboard.css
+++ b/dashboard.css
@@ -59,8 +59,9 @@ input {
 }
 
 .header-bottom {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-bottom-profile {
@@ -69,7 +70,9 @@ input {
   grid-template-rows: 1fr 1fr;
 }
 
-.header-bottom-profile > div {
+.big-profile-pic {
+  height: 80px;
+  width: 80px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 }
@@ -82,6 +85,11 @@ input {
 .header-bottom-profile > h1 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+}
+
+.header-bottom-buttons {
+  display: flex;
+  gap: 15px;
 }
 
 .header-bottom-buttons > button {
