--- a/dashboard.css
+++ b/dashboard.css
@@ -15,7 +15,7 @@ ul {
 
 .container {
   display: grid;
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 200px 1fr;
   grid-template-rows: 1fr 5fr;
   width: 100%;
   height: 100vh;
@@ -25,7 +25,8 @@ ul {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   display: grid;
-  padding: 1rem;
+  padding: 1rem 3rem;
+  background-color: #fff7ed;
 }
 
 .header-top {
@@ -44,7 +45,8 @@ input {
   width: 500px;
   height: 22px;
   border: none;
-  background-color: lightgray;
+  background-color: #fdba74;
+  padding-left: 10px;
 }
 
 .header-top-profile {
@@ -97,11 +99,13 @@ input {
   border-radius: 25px;
   border: 0px;
   font-family: Inter;
+  background-color: #f97316;
 }
 
 .dashboard {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  background-color: #f97316;
 }
 
 .dashboard ul {
@@ -112,13 +116,19 @@ input {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 4fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 10px;
+  gap: 2rem;
+  background: #fed7aa;
 }
 
 .projects {
   grid-row: 1 / 3;
+  padding: 1rem;
+}
+
+.projects > h1 {
+  padding-bottom: 1rem;
 }
 
 .project-card-container {
@@ -132,8 +142,9 @@ input {
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
   border-radius: 10px;
-  box-shadow: 0px 2px 3px gray;
+  box-shadow: 0px 2px 3px #431407;
   padding: 1rem 1rem 0rem 1rem;
+  background-color: #fff7ed;
 }
 
 .project-links {
@@ -154,13 +165,33 @@ input {
   grid-row: 1 / 2;
 }
 
+.announcements > h1{
+  padding: 1rem 0px;
+}
+
 .announcement-container {
-  margin: 1rem;
+  background-color: #fff7ed;
+  margin-right: 2rem;
+  border-radius: 10px;
+  box-shadow: 0px 2px 3px #431407;
+  padding: 1rem;
 }
 
 .trending {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+}
+
+.trending > h1 {
+  padding: 1rem 0px;
+}
+
+.trending-container {
+  background-color: #fff7ed;
+  margin-right: 2rem;
+  border-radius: 10px;
+  box-shadow: 0px 2px 3px #431407;
+  padding: 1rem;
 }
 
 .trending-container > div {
