--- a/dashboard.css
+++ b/dashboard.css
@@ -15,8 +15,8 @@ ul {
 
 .container {
   display: grid;
-  grid-template-columns: 200px 1fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 1fr 4fr;
   width: 100%;
   height: 100vh;
 }
@@ -100,6 +100,8 @@ input {
   border: 0px;
   font-family: Inter;
   background-color: #f97316;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 .dashboard {
@@ -108,8 +110,51 @@ input {
   background-color: #f97316;
 }
 
+.dashboard > h1 {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 10px;
+  padding: 1rem;
+}
+
+.dashboard > h1 > img {
+  width: 30px;
+  height: 30px;
+}
+
 .dashboard ul {
   list-style-type: none;
+  display: grid;
+  padding-top: 2rem;
+}
+
+li {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 10px;
+  padding: 1rem .5rem;
+  font-size: 20px;
+}
+
+li:hover {
+  background-color: black;
+  color:#f97316;
+  fill:#f97316;
+}
+
+li > svg {
+  width: 20px;
+  height: 20px;
+}
+
+svg:hover {
+}
+
+li > img {
+  width: 20px;
+  height: 20px;
 }
 
 .main {
@@ -145,6 +190,12 @@ input {
   box-shadow: 0px 2px 3px #431407;
   padding: 1rem 1rem 0rem 1rem;
   background-color: #fff7ed;
+  border-left: 10px solid #fdba74;
+  
+}
+
+.project-card > p {
+  color:#7c2d12;
 }
 
 .project-links {
@@ -167,6 +218,7 @@ input {
 
 .announcements > h1{
   padding: 1rem 0px;
+  padding-right: 1rem;
 }
 
 .announcement-container {
@@ -175,6 +227,19 @@ input {
   border-radius: 10px;
   box-shadow: 0px 2px 3px #431407;
   padding: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 10px;
+}
+
+.announcement-container > div > h2 {
+  font-size: 18px;
+  font-weight:bold;
+}
+
+.announcement-container > div > p {
+  font-size: 16px;
+  color: #7c2d12;
 }
 
 .trending {
@@ -192,25 +257,38 @@ input {
   border-radius: 10px;
   box-shadow: 0px 2px 3px #431407;
   padding: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 10px;
 }
 
 .trending-container > div {
   display: grid;
   grid-template-columns: 50px 1fr;
   grid-template-rows: 1fr 1fr;
+  column-gap: 10px;
+  align-items: center;
+  
 }
 
-.trending-container > div > div {
+.trending-container > div > img {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  height: 50px;
+  width: 50px;
 }
 
 .trending-container > div > h2 {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  font-size: 16px;
+  font-weight:bold;
 }
 
 .trending-container > div > h3 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  font-size: 16px;
+  font-weight:normal;
+  color:#7c2d12;
 }
